# ray-tracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Images/: sphere.pgm
apps/: CMakeLists.txt  app.cpp
include/BRDFs/: brdf.hpp  glossy-specular-reflection.hpp  lambertian.hpp
include/Cameras/: camera.hpp  pinhole.hpp
include/Lights/: ambient.hpp  light.hpp  point-light.hpp
include/Materials/: material.hpp  matte.hpp  phong.hpp
include/Samplers/: jittered.hpp  sampler.hpp
include/Shapes/: plane.hpp  shape.hpp  sphere.hpp
include/Tracers/: multiple-objects.hpp  singlesphere.hpp  tracer.hpp
include/Utilities/: Point3D.hpp  Vector3D.hpp  color.hpp  math.hpp  normal.hpp  point.hpp  ray.hpp  record.hpp  vector.hpp
include/Window/: window.hpp
include/World/: view.hpp  viewplane.hpp  world.hpp
src/: CMakeLists.txt
src/BRDFs/: brdf.cpp  glossy-specular-reflection.cpp  lambertian.cpp
src/Cameras/: camera.cpp  pinhole.cpp
src/Lights/: ambient.cpp  light.cpp  point-light.cpp
src/Materials/: material.cpp  matte.cpp  phong.cpp
src/Samplers/: jittered.cpp  sampler.cpp
src/Shapes/: plane.cpp  shape.cpp  sphere.cpp
src/Tracers/: multiple-objects.cpp  singlesphere.cpp  tracer.cpp
src/Utilities/: Point3D.cpp  Vector3D.cpp  color.cpp  math.cpp  normal.cpp  point.cpp  ray.cpp  record.cpp  vector.cpp
src/Window/: window.cpp
src/World/: view.cpp  viewplane.cpp  world.cpp
